--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"victory": "^0.21.0",
-		"react-scripts": "1.1.0"
+		"react-scripts": "1.1.0",
+		"react-redux": "^5.0.7",
+		"redux": "^3.5.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
