--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
 		"victory": "^0.21.0",
 		"react-scripts": "1.1.0",
 		"react-redux": "^5.0.7",
-		"redux": "^3.5.2"
+		"redux": "^3.5.2",
+		"moxios": "0.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
